Altered spacing on page header and fixed fonts

--- a/src/_includes/css/main.css
+++ b/src/_includes/css/main.css
@@ -12,7 +12,7 @@ body {
   font-size: var(--font-size-3xl);
   font-weight: 300;
   letter-spacing: 0.1em;
-  line-height: 1;
+  line-height: 0.8;
   padding-block: 0.5em 0;
   text-align: center;
   text-indent: -1.5em;
@@ -27,11 +27,11 @@ body {
   font-weight: 100;
   padding-block-end: 0.5em;
   text-align: center;
-  text-indent: 2.5em;
+  text-indent: 3.25em;
 }
 
 /* For very small width displays, do not indent or outdent */
-@media (max-width: 400px) {
+@media (max-width: 425px) {
   :where(h1) {
     text-indent: 0;
   }
@@ -56,11 +56,10 @@ img[width][height] {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(600px, 100%), 1fr));
   grid-auto-rows: auto;
-  box-shadow: 0px 14px 5px 0px #d6dbd7;
+  box-shadow: 3px 10px 20px 2px rgba(0, 0, 0, 0.6);
+  /* box-shadow: 0px 14px 5px 0px #d6dbd7; */
 }
 
-.hero-image {
-}
 .hero-text {
   background-color: var(--hero-bg-color);
   font-size: var(--font-size-base);
