--- a/src/_includes/css/reset.css
+++ b/src/_includes/css/reset.css
@@ -58,8 +58,8 @@ select {
 /* Add font families early */
 @font-face {
   font-family: Cochin;
-  src: url("/fonts/Cochin-Regular.woff2") format("woff2"),
-    url("/fonts/Cochin-Regular.woff") format("woff");
+  src: url("/fonts/Cochin.woff2") format("woff2"),
+    url("/fonts/Cochin.woff") format("woff");
   font-weight: normal;
 }
 @font-face {
