--- a/src/_includes/css/variables.css
+++ b/src/_includes/css/variables.css
@@ -11,23 +11,6 @@
   --font-size-2xl: clamp(2.44rem, 3.01vw + 1.69rem, 3.95rem);
   --font-size-3xl: clamp(2.9rem, 4.42vw + 1.95rem, 5.26rem);
   --font-size-4xl: clamp(3.81rem, 6.4vw + 2.22rem, 7.01rem);
-  /* --font-size-sm: clamp(0.7813rem, 0.7744rem + 0.0341vw, 0.8rem);
-  --font-size-base: clamp(0.9375rem, 0.9148rem + 0.1136vw, 1rem);
-  --font-size-md: clamp(1.125rem, 1.0795rem + 0.2273vw, 1.25rem);
-  --font-size-lg: clamp(1.35rem, 1.2727rem + 0.3864vw, 1.5625rem);
-  --font-size-xl: clamp(1.62rem, 1.4989rem + 0.6057vw, 1.9531rem);
-  --font-size-2xl: clamp(1.9438rem, 1.7628rem + 0.9045vw, 2.4413rem);
-  --font-size-3xl: clamp(2.3325rem, 2.0709rem + 1.308vw, 3.0519rem);
-  --font-size-4xl: clamp(2.7994rem, 2.4301rem + 1.8466vw, 3.815rem); */
-  /*
-  --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
-  --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-  --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
-  --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
-  --font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
-  --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-  --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
-  */
 
   /* Accent Colors */
   --default-color: #000;
@@ -37,7 +20,7 @@
   --brand-color: #fffcd3;
 
   /* Font specs */
-  --brand-font: Cochin-Regular, serif;
+  --brand-font: Cochin, serif;
   --sub-brand-font: Cochin-Italic, cursive;
   --body-font: Baskerville-Normal, serif;
 }
